--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "did-jwt-vc": "^4.0.12",
     "jose": "^6.0.11",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
